--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,55 @@ html {
 
 body {
     margin: 0;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
 }
 
 h1 span,
 h2 span {
     text-transform: capitalize;
+}
+
+button {
+    cursor: pointer;
+}
+
+header {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+header .search {
+}
+
+header .search .search-input {
+    /* border-radius: 20px; */
+    border: 1px solid rgb(27, 27, 27);
+    font-size: 21px;
+    padding: 10px 20px;
+    transition: border-radius 0.5s;
+}
+
+header .search .search-input:focus {
+    border-radius: 20px;
+}
+
+header .search .btn-user-pos {
+    /* border-radius: 20px; */
+    padding: 10px 20px;
+    font-size: 21px;
+    padding-inline: 20px;
+    transition: border-radius 0.5s;
+}
+
+header .search .btn-user-pos:hover {
+    border-radius: 20px;
 }
 
 h2 button {
